<resources>
    <string name="app_name">Loan Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="pass_hint">***********</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="interest_rate">Interest rate</string>
    <string name="loan_details">Loan Details</string>
    <string name="loan_terms">Loan Terms</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="status">Status</string>
    <string name="issue_date">Issue date</string>
    <string name="due_date">Due date</string>
    <string name="amount_due">Amount due</string>
    <string name="amount_taken">Amount taken</string>
    <string name="period_days">Period(days)</string>
    <string name="reference_code">Reference code</string>
    <string name="rate">%Rate</string>
    <string name="amount">Amount</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="todo_delete">TODODEL</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
